--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -92,6 +92,13 @@ body {
     margin-bottom: 10px;
 }
 
+.product-description {
+    color: gray;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    font-style: italic;
+}
+
 .product-image {
     max-width: 100%;
     height: 200px; /* Adjust height for better consistency */
